k8s/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
    spec:
      serviceAccountName: runner
      containers:
        - name: runner
          image: gitea/act_runner:latest
          volumeMounts:
            - name: runner-config
              mountPath: /etc/act_runner

        - name: dind
          image: docker:dind
          securityContext:
            privileged: true
          args:
            - --dns=10.43.0.10
            - --dns-search=default.svc.cluster.local
            - --dns-search=svc.cluster.local
            - --dns-search=cluster.local
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker

      volumes:
        - name: runner-config
          configMap:
            name: runner-config
        - name: dind-storage
          emptyDir: {}
